tests/v0-fail/choice.out
Running <root>/choice.cli ...

printf "hello\n"
---
hello
---
ERROR: pattern choice at line <root>/choice.cli:4 does not match output line "hello"
matching Sequence([Choice(["foo", "bar", "baz"]), End])
  matching Choice(["foo", "bar", "baz"])
    matching "foo"
    FAILED match: "hello"
    matching "bar"
    FAILED match: "hello"
    matching "baz"
    FAILED match: "hello"

❌ FAIL

<root>/choice.cli FAILED
Error: pattern choice at line <root>/choice.cli:4 does not match output line "hello"

